--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -52,6 +52,7 @@
     "expo-haptics": "~14.0.0",
     "expo-image": "~2.0.3",
     "expo-image-manipulator": "~13.0.5",
+    "expo-intent-launcher": "~12.0.1",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
     "expo-navigation-bar": "~4.0.6",
