--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "packages/ndk"]
 	path = packages/ndk
-	url = https://github.com/nostr-dev-kit/ndk
+	url = git@github.com:nostr-dev-kit/ndk.git
 	branch = master
